--- a/MSCI_546_project.ipynb
+++ b/MSCI_546_project.ipynb
@@ -11,19 +11,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "96KqumcOw8UP"
       },
       "outputs": [
         {
-          "ename": "",
-          "evalue": "",
+          "ename": "ModuleNotFoundError",
+          "evalue": "No module named 'xgboost'",
           "output_type": "error",
           "traceback": [
-            "\u001b[1;31mRunning cells with 'c:\\Users\\sutha\\AppData\\Local\\Programs\\Python\\Python37-32\\python.exe' requires the ipykernel package.\n",
-            "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
-            "\u001b[1;31mCommand: 'c:/Users/sutha/AppData/Local/Programs/Python/Python37-32/python.exe -m pip install ipykernel -U --user --force-reinstall'"
+            "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+            "\u001b[1;32m<ipython-input-1-384ce12bd650>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mpandas\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mpd\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mnumpy\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[1;32mimport\u001b[0m \u001b[0mxgboost\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mxgb\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      4\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mlightgbm\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mlgb\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmodel_selection\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mtrain_test_split\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mRandomizedSearchCV\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+            "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'xgboost'"
           ]
         }
       ],
@@ -50,7 +51,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -58,18 +59,7 @@
         "id": "dOC7BdNDxdJW",
         "outputId": "82473843-d631-4ce6-b41c-5e3b6b844a6c"
       },
-      "outputs": [
-        {
-          "ename": "",
-          "evalue": "",
-          "output_type": "error",
-          "traceback": [
-            "\u001b[1;31mRunning cells with 'c:\\Users\\sutha\\AppData\\Local\\Programs\\Python\\Python37-32\\python.exe' requires the ipykernel package.\n",
-            "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
-            "\u001b[1;31mCommand: 'c:/Users/sutha/AppData/Local/Programs/Python/Python37-32/python.exe -m pip install ipykernel -U --user --force-reinstall'"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "train = pd.read_csv(\"train.csv\")\n",
         "train.drop(\"Id\", axis = 1, inplace = True)"
@@ -1340,8 +1330,16 @@
       "name": "python3"
     },
     "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
       "name": "python",
-      "version": "3.7.2"
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.8.3"
     }
   },
   "nbformat": 4,
