made lightgbm code more consistent

--- a/MSCI_546_project.ipynb
+++ b/MSCI_546_project.ipynb
@@ -611,23 +611,23 @@
       "source": [
         "lgbModel = lgb.LGBMRegressor()\n",
         "lgbModel.fit(X_train, y_train)\n",
-        "y_train_prediction = lgbModel.predict(X_train)\n",
-        "y_test_prediction = lgbModel.predict(X_test)\n",
+        "y_train_preds = lgbModel.predict(X_train)\n",
+        "y_test_preds = lgbModel.predict(X_test)\n",
         "# MSE\n",
-        "print('MSE (train):', mean_squared_error(y_train, y_train_prediction))\n",
-        "print('MSE (test):', mean_squared_error(y_test, y_test_prediction))\n",
+        "print('MSE (train):', mean_squared_error(y_train, y_train_preds))\n",
+        "print('MSE (test):', mean_squared_error(y_test, y_test_preds))\n",
         "\n",
         "# RMSE\n",
-        "print('RMSE (train):',  np.sqrt(mean_squared_error(y_train, y_train_prediction)))\n",
-        "print('RMSE (test):', np.sqrt(mean_squared_error(y_test, y_test_prediction)))\n",
+        "print('RMSE (train):',  np.sqrt(mean_squared_error(y_train, y_train_preds)))\n",
+        "print('RMSE (test):', np.sqrt(mean_squared_error(y_test, y_test_preds)))\n",
         "\n",
         "# MAE\n",
-        "print('MAE (train):', mean_absolute_error(y_train, y_train_prediction))\n",
-        "print('MAE (test):', mean_absolute_error(y_test, y_test_prediction))\n",
+        "print('MAE (train):', mean_absolute_error(y_train, y_train_preds))\n",
+        "print('MAE (test):', mean_absolute_error(y_test, y_test_preds))\n",
         "\n",
         "# R2 Score\n",
-        "print('R2 Score (train):', r2_score(y_train, y_train_prediction))\n",
-        "print('R2 Score (test):', r2_score(y_test, y_test_prediction))\n"
+        "print('R2 Score (train):', r2_score(y_train, y_train_preds))\n",
+        "print('R2 Score (test):', r2_score(y_test, y_test_preds))\n"
       ]
     },
     {
@@ -685,23 +685,23 @@
       "source": [
         "lgbBestModel = lgb.LGBMRegressor(learning_rate=0.05, n_estimators= 100, num_leaves= 40)\n",
         "lgbBestModel.fit(X_train, y_train)\n",
-        "y_train_prediction = lgbBestModel.predict(X_train)\n",
-        "y_test_prediction = lgbBestModel.predict(X_test)\n",
+        "y_train_preds = lgbBestModel.predict(X_train)\n",
+        "y_test_preds = lgbBestModel.predict(X_test)\n",
         "# MSE\n",
-        "print('MSE (train):', mean_squared_error(y_train, y_train_prediction))\n",
-        "print('MSE (test):', mean_squared_error(y_test, y_test_prediction))\n",
+        "print('MSE (train):', mean_squared_error(y_train, y_train_preds))\n",
+        "print('MSE (test):', mean_squared_error(y_test, y_test_preds))\n",
         "\n",
         "# RMSE\n",
-        "print('RMSE (train):',  np.sqrt(mean_squared_error(y_train, y_train_prediction)))\n",
-        "print('RMSE (test):', np.sqrt(mean_squared_error(y_test, y_test_prediction)))\n",
+        "print('RMSE (train):',  np.sqrt(mean_squared_error(y_train, y_train_preds)))\n",
+        "print('RMSE (test):', np.sqrt(mean_squared_error(y_test, y_test_preds)))\n",
         "\n",
         "# MAE\n",
-        "print('MAE (train):', mean_absolute_error(y_train, y_train_prediction))\n",
-        "print('MAE (test):', mean_absolute_error(y_test, y_test_prediction))\n",
+        "print('MAE (train):', mean_absolute_error(y_train, y_train_preds))\n",
+        "print('MAE (test):', mean_absolute_error(y_test, y_test_preds))\n",
         "\n",
         "# R2 Score\n",
-        "print('R2 Score (train):', r2_score(y_train, y_train_prediction))\n",
-        "print('R2 Score (test):', r2_score(y_test, y_test_prediction))"
+        "print('R2 Score (train):', r2_score(y_train, y_train_preds))\n",
+        "print('R2 Score (test):', r2_score(y_test, y_test_preds))"
       ]
     },
     {
